--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -13,7 +13,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
-        android:backgroundTint="@color/purple_500"
+        android:backgroundTint="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,9 +32,11 @@
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
+            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:padding="10dp"
+            android:background="@color/teal_200"
            android:gravity="center_horizontal" />
 
         <TextView
@@ -42,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:text="@string/text"
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textAlignment="center"
