--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -36,7 +36,7 @@
            android:textAllCaps="true"
            android:textAlignment="center"
            android:padding="10dp"
-            android:background="@color/teal_200"
+            android:background="@color/baby_blue"
            android:gravity="center_horizontal" />
 
         <TextView
@@ -44,8 +44,8 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:text="@string/text"
-            android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textColor="@color/raspberry"
+            android:textSize="22sp"
             android:textStyle="bold"
             android:textAlignment="center"
             android:gravity="center_horizontal"
