--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,22 +8,23 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
-        android:backgroundTint="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintCircleRadius="10dp"
-        android:layout_margin="10dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/white"
+            android:padding="10dp">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="10dp"
+                android:backgroundTint="@color/baby_blue">
 
         <TextView
            android:id="@+id/title"
@@ -31,13 +32,14 @@
            android:layout_height="70dp"
            android:text="@string/title"
            android:textSize="20sp"
-           android:textStyle="bold"
-            android:textColor="@color/black"
+           android:textStyle="italic"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:padding="10dp"
-            android:background="@color/baby_blue"
+           android:textColor="@color/raspberry"
            android:gravity="center_horizontal" />
+
+            </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/text"
@@ -52,6 +54,6 @@
             android:padding="10dp"/>
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
